<resources>
    <string name="app_name">TicTacToe</string>
    <string name="cell1">Cell 1</string>
    <string name="cell2">Cell 2</string>
    <string name="cell3">Cell 3</string>
    <string name="cell4">Cell 4</string>
    <string name="cell5">Cell 5</string>
    <string name="cell6">Cell 6</string>
    <string name="cell7">Cell 7</string>
    <string name="cell8">Cell 8</string>
    <string name="cell9">Cell 9</string>
    <string name="dialog_message">Play Again</string>

</resources>
