<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root"
    tools:context="com.example.varun.tictactoe.MainActivity">


    <GridLayout
        android:id="@+id/board"
        android:layout_width="360dp"
        android:layout_height="360dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/board"
        android:columnCount="3"
        android:rowCount="3">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_column="0"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_row="0"
            android:contentDescription="@string/cell1"
            android:onClick="dropIn"
            android:tag="0"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_column="1"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_row="0"
            android:contentDescription="@string/cell2"
            android:onClick="dropIn"
            android:tag="1"/>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_column="2"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_row="0"
            android:contentDescription="@string/cell3"
            android:onClick="dropIn"
            android:tag="2"/>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_column="0"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="35dp"
            android:layout_row="1"
            android:contentDescription="@string/cell4"
            android:onClick="dropIn"
            android:tag="3"/>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_column="1"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="35dp"
            android:layout_row="1"
            android:contentDescription="@string/cell5"
            android:onClick="dropIn"
            android:tag="4"/>

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_column="2"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="35dp"
            android:layout_row="1"
            android:contentDescription="@string/cell6"
            android:onClick="dropIn"
            android:tag="5"/>

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_column="0"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp"
            android:layout_row="2"
            android:contentDescription="@string/cell7"
            android:onClick="dropIn"
            android:tag="6"/>


        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_column="1"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="35dp"
            android:layout_row="2"
            android:contentDescription="@string/cell8"
            android:onClick="dropIn"
            android:tag="7"/>

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_column="2"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="35dp"
            android:layout_row="2"
            android:contentDescription="@string/cell9"
            android:onClick="dropIn"
            android:tag="8"/>

    </GridLayout>
</RelativeLayout>
